NAS-113701: Fixing icon alignment
(cherry picked from commit d408e3faf9688664eba6ad03f24882b42cb2d725)

--- a/src/app/pages/common/entity/entity-form/components/dynamic-field/dynamic-field.scss
+++ b/src/app/pages/common/entity/entity-form/components/dynamic-field/dynamic-field.scss
@@ -19,6 +19,7 @@
 }
 
 :host mat-icon.paragraph-icon {
+  align-self: center;
   font-size: 40px;
   height: 40px;
   width: 40px;
